docs/envoy/v1.28.7/_sources/intro/arch_overview/security/external_dep_api.rst.txt
External dependencies: ``api``
==============================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `bazel-skylib <https://github.com/bazelbuild/bazel-skylib>`__, `1.4.2 <https://github.com/bazelbuild/bazel-skylib/releases/tag/1.4.2>`__, 2023-05-31, , `Apache-2.0 <https://github.com/bazelbuild/bazel-skylib/blob/1.4.2/LICENSE>`__
  `buf <https://buf.build>`__, `1.26.1 <https://github.com/bufbuild/buf/releases/tag/v1.26.1>`__, 2023-08-09, , `Apache-2.0 <https://github.com/bufbuild/buf/blob/v1.26.1/LICENSE>`__
  `Go rules for Bazel <https://github.com/bazelbuild/rules_go>`__, `0.39.1 <https://github.com/bazelbuild/rules_go/releases/tag/v0.39.1>`__, 2023-04-20, , `Apache-2.0 <https://github.com/bazelbuild/rules_go/blob/v0.39.1/LICENSE.txt>`__
  `Google APIs <https://github.com/googleapis/googleapis>`__, `114a745 <https://github.com/googleapis/googleapis/tree/114a745b2841a044e98cdbb19358ed29fcf4a5f1>`__, 2023-01-10, , `Apache-2.0 <https://github.com/googleapis/googleapis/blob/114a745b2841a044e98cdbb19358ed29fcf4a5f1/LICENSE>`__
  `OpenCensus Proto <https://github.com/census-instrumentation/opencensus-proto>`__, `0.4.1 <https://github.com/census-instrumentation/opencensus-proto/releases/tag/v0.4.1>`__, 2022-09-23, , `Apache-2.0 <https://github.com/census-instrumentation/opencensus-proto/blob/v0.4.1/LICENSE>`__
  `OpenTelemetry Proto <https://github.com/open-telemetry/opentelemetry-proto>`__, `1.0.0 <https://github.com/open-telemetry/opentelemetry-proto/releases/tag/v1.0.0>`__, 2023-07-03, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-proto/blob/v1.0.0/LICENSE>`__
  `Prometheus client model <https://github.com/prometheus/client_model>`__, `0.4.0 <https://github.com/prometheus/client_model/releases/tag/v0.4.0>`__, 2023-05-03, , `Apache-2.0 <https://github.com/prometheus/client_model/blob/v0.4.0/LICENSE>`__
  `Protobuf Rules for Bazel <https://github.com/bazelbuild/rules_proto>`__, `4.0.0 <https://github.com/bazelbuild/rules_proto/releases/tag/4.0.0>`__, 2021-09-15, , `Apache-2.0 <https://github.com/bazelbuild/rules_proto/blob/4.0.0/LICENSE>`__
  `protoc-gen-validate (PGV) <https://github.com/bufbuild/protoc-gen-validate>`__, `1.0.2 <https://github.com/bufbuild/protoc-gen-validate/releases/tag/v1.0.2>`__, 2023-06-26, , `Apache-2.0 <https://github.com/bufbuild/protoc-gen-validate/blob/v1.0.2/LICENSE>`__
  `xDS API <https://github.com/cncf/xds>`__, `e9ce688 <https://github.com/cncf/xds/tree/e9ce68804cb4e64cab5a52e3c8baf840d4ff87b7>`__, 2023-06-07, , `Apache-2.0 <https://github.com/cncf/xds/blob/e9ce68804cb4e64cab5a52e3c8baf840d4ff87b7/LICENSE>`__
  `Zipkin API <https://github.com/openzipkin/zipkin-api>`__, `1.0.0 <https://github.com/openzipkin/zipkin-api/releases/tag/1.0.0>`__, 2020-11-22, , `Apache-2.0 <https://github.com/openzipkin/zipkin-api/blob/1.0.0/LICENSE>`__

